--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,4 +14,4 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Sleep
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000 # 10 Min
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
