--- a/config/west.yml
+++ b/config/west.yml
@@ -4,11 +4,13 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: zmk-locales
+      url-base: github.com/joelspadin/zmk-locales
   projects:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
+    - name: locales
+      remote: zmk-locales
   self:
     path: config
