--- a/config/west.yml
+++ b/config/west.yml
@@ -5,12 +5,12 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: zmk-locales
-      url-base: github.com/joelspadin
+      url-base: https://github.com/joelspadin
   projects:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
-    - name: zmk-locales
+    - name: locales
       remote: zmk-locales
   self:
     path: config
