Fixed zmk-locales import 5?

--- a/config/west.yml
+++ b/config/west.yml
@@ -1,6 +1,7 @@
 manifest:
   defaults:
-    revision: v0.3
+    #revision: v0.3
+    revision: main
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
