--- a/config/corne.conf
+++ b/config/corne.conf
@@ -15,3 +15,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 # Sleep
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+
+
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
